# awesome-agent-skill

./: .gitignore  CHANGELOG.md  EXTERNAL_SKILLS.md  LICENSE  README.md  SKILL_INVENTORY.md  pyproject.toml
.claude/commands/: install-bundle.md  install-domain.md  sync-skills.md  validate-skills.md
.cursor/skills/: README.md
.gemini/commands/: sync-skills.toml  validate-skills.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: awesome-list-submission.yml  dataagent-pro-request.yml  new-skill.yml  (+2 more)
catalog/: README.md  index.html  index.template.html
docs/: RELEASE_CADENCE.md  comparison.md  distribution.md  good-first-issues.md  gstack-diff.md  gstack-refresh.md  gstack-version.md  launch-config.md  monetization-inquiries.md  public-private-split.md  resolver.md  review-rubric.md  skill-writing-guide.md  skillhub-cli.md
mcp-templates/: README.md  monitoring.json  project-tracker.json
registry/: README.md  bundles.json  gstack-sync.json  manifest.json  quality.json  recommend-fixtures.json  skills.json
scripts/: audit-skill-parity.py  bootstrap-specflow-ai.sh  claude-skill-map.json  convert-to-claude.py  convert-to-cursor.py  generate-catalog.py  generate-plugins.py  generate-quality.py  generate-registry.py  generate-resolver.py  import-plugins.py  pack-skills.py  prune_claude_skills.py  refresh-gstack-pack.py  repo-metrics.py  resolve-bundle.py  skill_format.py  skillhub.py  skillhub_recommend.py  validate-skills.py
skillhub/: __init__.py  cli.py  recommend.py
specflow-ai-overlay/: .gitignore  README.md
(+2013 files in other folders)
