[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillhub-catalog"
version = "0.2.0"
description = "CLI and recommendation engine for awesome-agent-skill registry"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "charlieviettq" }]
keywords = ["cursor", "claude", "agent", "skills", "skillhub"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.scripts]
skillhub = "skillhub.cli:main"

[project.urls]
Homepage = "https://github.com/charlieviettq/awesome-agent-skill"
Repository = "https://github.com/charlieviettq/awesome-agent-skill"
Documentation = "https://github.com/charlieviettq/awesome-agent-skill/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["skillhub*"]

[tool.setuptools.package-data]
skillhub = ["py.typed"]
